--- a/content/publication/Transformer CNN for Automated Artifact Detection in Scalp EEG/cite.bib
+++ b/content/publication/Transformer CNN for Automated Artifact Detection in Scalp EEG/cite.bib
@@ -1,6 +1,8 @@
-@article{peh2022transformer,
-  title={Transformer Convolutional Neural Networks for Automated Artifact Detection in Scalp EEG},
+@inproceedings{peh2022transformer,
+  title={Transformer convolutional neural networks for automated artifact detection in scalp eeg},
   author={Peh, Wei Yan and Yao, Yuanyuan and Dauwels, Justin},
-  journal={arXiv preprint arXiv:2208.02405},
-  year={2022}
+  booktitle={2022 44th Annual International Conference of the IEEE Engineering in Medicine \& Biology Society (EMBC)},
+  pages={3599--3602},
+  year={2022},
+  organization={IEEE}
 }
