remove pdf and add doi

--- a/content/publication/Six-center Assessment of CNN-Transformer/cite.bib
+++ b/content/publication/Six-center Assessment of CNN-Transformer/cite.bib
@@ -1,7 +1,26 @@
-@article{peh2022six,
-  title={Six-center Assessment of CNN-Transformer with Belief Matching Loss for Patient-independent Seizure Detection in EEG},
-  author={Peh, Wei Yan and Thangavel, Prasanth and Yao, Yuanyuan and Thomas, John and Tan, Yee-Leng and Dauwels, Justin},
-  journal={International Journal of Neural Systems},
-  year={2022},
-  publisher={World Scientific}
+@article{doi:10.1142/S0129065723500120,
+author = {Peh, Wei Yan and Thangavel, Prasanth and Yao, Yuanyuan and Thomas, John and Tan, Yee-Leng and Dauwels, Justin},
+title = {Six-center Assessment of CNN-Transformer with Belief Matching Loss for Patient-independent Seizure Detection in EEG},
+journal = {International Journal of Neural Systems},
+volume = {0},
+number = {ja},
+pages = {null},
+year = {0},
+doi = {10.1142/S0129065723500120},
+
+URL = { 
+    
+        https://doi.org/10.1142/S0129065723500120
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1142/S0129065723500120
+    
+    
+
+}
+
 }
