--- a/content/publication/EEG-based Decoding of Selective Visual Attention in Superimposed Videos/cite.bib
+++ b/content/publication/EEG-based Decoding of Selective Visual Attention in Superimposed Videos/cite.bib
@@ -1,9 +1,10 @@
-@misc{yao2024eegbaseddecodingselectivevisual,
-      title={EEG-based Decoding of Selective Visual Attention in Superimposed Videos}, 
-      author={Yuanyuan Yao and Wout De Swaef and Simon Geirnaert and Alexander Bertrand},
-      year={2024},
-      eprint={2409.12562},
-      archivePrefix={arXiv},
-      primaryClass={eess.SP},
-      url={https://arxiv.org/abs/2409.12562}, 
-}
+@ARTICLE{11037540,
+  author={Yao, Yuanyuan and Swaef, Wout De and Geirnaert, Simon and Bertrand, Alexander},
+  journal={IEEE Journal of Biomedical and Health Informatics}, 
+  title={EEG-Based Decoding of Selective Visual Attention in Superimposed Videos}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-14},
+  keywords={Videos;Visualization;Decoding;Electroencephalography;Correlation;Europe;Brain-computer interfaces;Artificial intelligence;Optical flow;Functional magnetic resonance imaging;brain-computer interface;EEG;selective visual attention decoding;video stimuli},
+  doi={10.1109/JBHI.2025.3580261}}
